# map-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: Canvas.tsx  InputBox.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/hooks/: useMapRenderer.ts  useWorldGenerator.ts  useWorldModule.ts
frontend/src/renderer/: Camera.ts  CanvasRenderer.ts
frontend/src/styles/: variables.css
frontend/src/types/: World.ts
frontend/src/utils/: index.ts
frontend/src/wasm/: WorldGenerator.ts  WorldModule.ts
generator/src/: main.cpp
generator/src/core/: random.h  vector2.h
generator/src/geometry/: geometry.cpp
generator/src/render/: image.h
generator/src/terrain/: terrain.cpp
generator/src/world/: bindings.cpp  map_bounds.h  world.cpp
src/: App.tsx  bindings.cpp  constants.ts  utils.ts
src/components/: Button.tsx  Canvas.tsx  NumberInput.tsx  Statusbar.tsx  Toolbar.tsx  Topbar.tsx
src/components/inspectors/: GeneratorInspector.tsx  SaveInspector.tsx  SelectInspector.tsx  index.ts
src/core/: bindings.cpp  random.cpp  vector2.cpp  vector2.h
src/geometry/: bindings.cpp  geometry.cpp  geometry.h  poisson.cpp  poisson.h  voronoi.cpp  voronoi.h
src/hooks/: index.ts  useCanvasControls.ts  useMapRenderer.ts  useWorldGenerator.ts  useWorldModule.ts
src/layouts/: GridLayout.tsx  MainLayout.tsx  index.ts
src/layouts/main/: Canvas.tsx  (+5 more)
src/render/: image.cpp
src/renderer/: Camera.ts  MapRenderer.ts
src/styles/: globals.css  variables.css
src/terrain/: terrain.h
src/types/: index.ts
src/wasm/: WorldGenerator.ts  WorldModule.ts  worldgen.js  worldgen.wasm
src/world/: bindings.cpp  world.cpp  world.h
(+4 files in other folders)
